[package]
name = "interchain-token-factory"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "0.50.3"

[dev-dependencies.dharitri-sc-scenario]
version = "0.50.3"

[dependencies.interchain-token-service]
path = "../interchain-token-service"

[dependencies.operatable]
path = "../modules/operatable"

[dependencies.token-manager]
path = "../token-manager"
